[package]
name = "msp"
version = "2.4.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "msp"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
solana-program = "~1.9.2"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
