[package]
name = "msp"
version = "2.4.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "msp"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
solana-program = "~1.9.13"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
