[package]
name = "msp"
version = "2.8.2"
description = "Money Streaming Program"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "msp"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test = []
test-bpf = []

[dependencies]
proc-macro2 = "1.0.86"
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
solana-program = "~1.9.13"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }

[dev-dependencies]
anchor-client = { version = "0.24.2", features = ["debug"] }
solana-program-test = "1.9.13"
